--- a/lesson1/task3/package.json
+++ b/lesson1/task3/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server -d --devtool eval-source-maps --open",
-    "build": "webpack -p"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
