--- a/Component-update/task3/package.json
+++ b/Component-update/task3/package.json
@@ -29,6 +29,9 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "core-js": "^3.18.1",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
